syntax = "proto3";

package proto;

// ------------------- Base -------------------

message PlaceError {
  int32 code = 1;
  string message = 2;
}

message Coord {
  double latitude = 1;
  double longitude = 2;
}

// ------------------- Place -------------------

service PlaceService {
  rpc ListByCoord(PlaceListByCoordRequest) returns (PlaceListByCoordResponse) {}
}

message Place {
  string id = 1;
  string name = 2;
  string rating = 3;
  string address = 4;
  bool open = 5;
  string photo_reference = 6;
  Coord coord = 7;
}

message PlaceListByCoordRequest {
  Coord coord = 1;
  string user_id = 3;
}

message PlaceListByCoordResponse {
  repeated Place data = 1;
  PlaceError error = 2;
}
